# itera-mcp

./: .gitignore  README.md  main.py  pyproject.toml  workflow.md
reqs/: req01.md  req02.md  req03-code-quality.md
src/itera_mcp/: __init__.py  database.py  enums.py  models.py  server.py  utils.py
src/itera_mcp/tools/: conclusions.py  guardrails.py  items.py  iterations.py  memory.py  merge.py  projects.py  queries.py  sessions.py  status.py  tags.py
tests/: conftest.py  test_database.py  test_items.py  test_iterations.py  test_memory.py  test_projects.py  test_queries.py  test_server.py  test_status.py
